# job-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  hunt.yml  tailor.yml
jobpipe/: __init__.py  config.py  db.py  notify.py  profile_loader.py
jobpipe/hunt/: .env.example  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  agent.py  config.py  db.py  enricher.py  job_agent.py  notifier.py  requirements.txt  run_agent.sh  scorer.py  seen_jobs.json  test_source.py
jobpipe/hunt/profile/: portals.yml  profile.yml
jobpipe/hunt/prompts/: __init__.py  scorer.md
jobpipe/hunt/scripts/: check_liveness.py
jobpipe/hunt/sources/: _http.py  ashby.py  eighty_thousand_hours.py  greenhouse.py  hn_whoshiring.py  indeed.py  jsearch.py  lever.py  linkedin.py  remoteok.py  serpapi.py  workday.py
jobpipe/hunt/utils/: enricher.py  jobid.py  validator.py
jobpipe/shared/: __init__.py  ats_detect.py  html.py  jobid.py  storage.py  validator.py
jobpipe/submit/: CLAUDE.md  README.md  __init__.py  config.py  confirm.py  db.py  main.py  requirements.txt  review_packet.py  router.py  runner.py  runner_legacy.py  storage.py
jobpipe/submit/adapters/: _common.py  applicant_base.py  ashby.py  base.py  browser_tools.py  generic_stagehand.py  greenhouse.py  lever.py  prepare_loop.py
jobpipe/submit/adapters/deterministic/: ashby.py
jobpipe/submit/adapters/prepare_dom/: __init__.py  _common.py  ashby.py  greenhouse.py  lever.py  universal.py
jobpipe/submit/browser/: session.py
jobpipe/submit/review/: packet.py
jobpipe/submit/scripts/: smoke_greenhouse.py  smoke_greenhouse_legacy.py  submit_one.py  submit_one_legacy.py
jobpipe/submit/tests/: test_scaffold.py
jobpipe/tailor/: CHANGELOG.md  CLAUDE.md  DATA_CONTRACT.md  README.md  __init__.py  config.py  db.py  main.py  notify.py  paths.py  pipeline.py  requirements.txt  storage.py  url_resolver.py
jobpipe/tailor/applicant/: agent_loop.py  ashby.py  base.py  browser_tools.py  detector.py  greenhouse.py  lever.py  universal.py  url_resolver.py
jobpipe/tailor/interview_prep/: __init__.py  bank.py  generator.py
jobpipe/tailor/prompts/: __init__.py  _shared.md  agent_common.md  agent_prepare.md  agent_submit.md  classify_archetype.md  form_answers.md  star_stories.md  tailor_cover_letter.md  tailor_latex_resume.md  tailor_resume.md
jobpipe/tailor/scripts/: 007_career_ops_alignment.sql  analyze_patterns.py  cv_sync_check.py  migrate_supabase.py  submit_one.py  tailor_one.py  test_beacon.py  test_local_form.py
jobpipe/tailor/tailor/: archetype.py  cover_letter.py  cover_letter_pdf.py  form_answers.py  latex_resume.py  resume.py
profile/: profile.yml
scripts/: mark_run.py  smoke.py  smoke_legacy.py
tests/: conftest.py  test_application_defaults_consistency.py  test_console_scripts.py  test_mark_failed_split.py  test_per_row_tailor.py  test_prefill_attempts_audit.py  test_prepare_dom_ashby.py  test_prepare_dom_common.py  test_prepare_dom_lever.py  test_shared_jobid.py  test_smoke.py  test_submit_config.py  test_submit_one_paths.py  test_submit_scaffold.py  test_unified_modules_consistency.py
tests/fixtures/: fake_form.html
tests/legacy/: test_submit_scaffold.py
