[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpipe"
version = "0.0.0"
description = "Unified job hunt -> tailor -> submit pipeline (consolidates job-hunter, job-applicant, job-submitter)."
requires-python = ">=3.9"
authors = [{ name = "Vishal Pathak" }]
readme = "README.md"

dependencies = [
    # PR-9 consolidated the three per-subpackage requirements.txt files
    # (jobpipe/{hunt,tailor,submit}/requirements.txt) into this list so the
    # unified repo has one source of truth for runtime deps. Pins use ">="
    # to match the loosest of the three pre-merge sets — tighten only when
    # a known-broken upstream version forces it.
    #
    # Shared
    "anthropic>=0.40.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    # Hunt
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    # Tailor
    "apscheduler>=3.10.0",
    "beautifulsoup4",
    # Cover-letter PDF rendering — lazy-imported inside
    # jobpipe/tailor/tailor/cover_letter_pdf.py::render_cover_letter_pdf
    # so test envs without it still import jobpipe.tailor.pipeline cleanly.
    "reportlab",
    # Submit
    "pydantic>=2.6.0",
    "stagehand>=3.19.0",            # SDK is published as "stagehand", not "stagehand-py"
    "playwright>=1.40.0",
    "browserbase>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
# PR-3: hunt orchestrator console script. Calls the hunt agent's `run()`
# which parses CLI args (`--mode`, `--once`) and executes the pipeline once.
jobpipe-hunt = "jobpipe.hunt.agent:run"
# PR-4: tailor console script. Calls pipeline.run() which parses CLI args
# (`--once`, `--status`, `--test-tailor`) and runs one cycle of
# process_approved_jobs + process_prefill_requested_jobs. The cycle now
# owns BOTH tailoring and pre-fill (Path A) — the legacy ``jobpipe-submit``
# console script (Path B / Browserbase) was retired during the local-
# Playwright consolidation; ``jobpipe/submit/runner_legacy.py`` is kept
# as reference but has no entry-point binding.
jobpipe-tailor = "jobpipe.tailor.pipeline:run"

[tool.setuptools]
# Each listed package needs to be installed so setuptools wires up the
# console-script entry points. Sub-packages with __init__.py are picked
# up transitively by setuptools' default discovery, but listing them
# explicitly here keeps the surface auditable. PR-4 adds the tailor
# subtree (jobpipe.tailor.*) and the new submit/adapters/prepare_dom
# package — siblings of PR-5's deterministic/ adapters.
packages = [
    "jobpipe",
    "jobpipe.shared",
    "jobpipe.hunt",
    "jobpipe.tailor",
    "jobpipe.tailor.tailor",
    "jobpipe.tailor.interview_prep",
    "jobpipe.tailor.prompts",
    "jobpipe.tailor.scripts",
    "jobpipe.submit",
    "jobpipe.submit.adapters",
    "jobpipe.submit.adapters.deterministic",
    "jobpipe.submit.adapters.prepare_dom",
    "jobpipe.submit.browser",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# PR-5: dropped `pythonpath = ["."]` — `pip install -e .` now installs
# `jobpipe`, `jobpipe.shared`, `jobpipe.hunt`, and `jobpipe.submit`,
# which is enough for both the root tests and the submit tests (the
# submit tests self-bootstrap their own subtree onto sys.path inside the
# fixture). Reinstate this only if a future test plugin needs it and
# document why.
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Local-Playwright consolidation: the Path-B (Browserbase + Stagehand)
# scaffold tests live under tests/legacy/ and are auto-tagged with the
# ``legacy`` marker by tests/legacy/conftest.py. Default pytest run
# excludes them so future PRs don't have to keep the dead-code suite
# green. Run them on demand with ``pytest -m legacy``.
addopts = "-m 'not legacy'"
markers = [
    "legacy: Forensic-only tests for the retired Browserbase + Stagehand path. Excluded by default; run with `pytest -m legacy`.",
]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["jobpipe/hunt", "jobpipe/tailor", "jobpipe/submit"]
